improvement on initial commit
improved functions and better looking

--- a/flashcards.html
+++ b/flashcards.html
@@ -17,8 +17,7 @@
 <!--Div to hold controls for min functions-->
     <div id = 'controls'>
         <div id = 'main_buttons'>
-            <button id = 'use_cards'>make/edit cards
-            </button>
+            <button id = 'use_cards'>make/edit cards</button>
             <!-- <button id = 'use_cards'>use cards</button> -->
             <button id = 'save_button'>save data</button>
         </div>
