cleaned up and added logo etc

--- a/flashcards.html
+++ b/flashcards.html
@@ -18,7 +18,7 @@
 <!--Div to hold controls for min functions-->
     <div id = 'controls'>
         <div id = 'main_buttons'>
-            <button id = 'use_cards'>make/edit cards</button>
+            <button id = 'use_cards'>make/edit</button>
             <!-- <button id = 'use_cards'>use cards</button> -->
             <button id = 'save_button'>save data</button>
             <button id = 'advanced'><i class="fas fa-bars"></i>+</button>
@@ -34,7 +34,7 @@
         </div>
 
     </div>
-
+    <img id = 'logo' src = "./assets/logo.png">
     <!--add new flash card sets-->
     <div id= 'add_sets' class = 'area hidden'>
 
@@ -56,7 +56,7 @@
     <div id = 'additional_options' class = 'hidden'>
             <button id = "import_button" class = 'menu'>Import data</button>
             <button id = "export_button" class = 'menu'>Export data</button>
-            <button id = "reset_button" class = 'menu danger'>reset data</button>
+            <button id = "reset_button" class = 'menu danger'>Reset data</button>
 
         <div id = 'data_window_output' class = hidden>
             <textarea id = "text_area_output" class = "text_area" placeholder="data here..."></textarea>
