--- a/flashcards.html
+++ b/flashcards.html
@@ -7,6 +7,7 @@
   <link rel ='stylesheet' href="./css/main.css">
   <link rel ='stylesheet' href="./css/cards.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="manifest" href="manifest.json" />
 
 
 </head>
